static/css/theme.css
body{
    background-image: var(--bg-image);
    background-size: cover;
    background-repeat: no-repeat; 
    background-attachment: fixed;
}

.card { 
    margin: 10px !important;
    padding: 10px !important;
    box-shadow: 5px 5px 10px var(--shadow-color-02) !important;
    background-color: var(--bg-color) !important;
    border-color: var(--button-border-color);
}

.table{
    --bs-table-color: var(--text-color);
    --bs-table-bg: var(--bg-color);
    --bs-table-border-color: var(--bg-border-color);
}

.nav-link {
    color: var(--text-color) !important;
}

.img-thumbnail{
    border-color: var(--bg-border-color);
    background-color: var(--bg-color) !important;
}


.modal-content{
    background-color: var(--bg-color);
}

.modal-header{
    border-bottom: var(--bs-modal-header-border-width) solid var(--bg-border-color);
}

.modal-footer{
    border-top: var(--bs-modal-footer-border-width) solid var(--bg-border-color);
}

/* ##############################################################*/
/* icons that match the web theme must apply to the img tag. */
/* ##############################################################*/

.arrow_upvote{
    content: var(--arrow);
}

.arrow_fill_upvote{
    content: var(--arrow-fill);
}

.eye{
    content: var(--eye);
}

.edit{
    content: var(--edit);
}

.edit_normal{
    content: var(--edit-normal);
}

.delete{
    content: var(--delete);
}

.account{
    content: var(--account);
}

.account_false{
    content: var(--account-false);
}

.admin_true{
    content: var(--admin-true);
}

.admin_false{
    content: var(--admin-false);
}

.disabled_eye{
    content: var(--disabled-eye);
}

.theme_toggle_icon{
    content: var(--theme_toggle_icon);
}

.paginator-arrow-left{ content: var(--paginator-arrow-left); }
.paginator-arrow-right{ content: var(--paginator-arrow-right); }
.paginator-arrow-double-left{ content: var(--paginator-arrow-double-left); }
.paginator-arrow-double-right{ content: var(--paginator-arrow-double-right); }

